# dsp_stuff

./: .gitignore  Cargo.toml  README.md  build.sh  bundler.toml
plugins/brj_test/: Cargo.toml
plugins/brj_test/src/: lib.rs
plugins/dynamifir/: Cargo.toml
plugins/dynamifir/src/: lib.rs
plugins/dynconv/: Cargo.toml
plugins/dynconv/src/: lib.rs
research/: conv.ipynb  util.py
src/: binrepitchjoin.rs  conv.rs  fft.rs  lib.rs  util.rs  wavetable.rs
src/iir/: mod.rs
src/vectorize/: avx.rs  mod.rs
