[package]
name = "dsp_stuff"
version = "0.1.0"
edition = "2024"

[features]
prefer_f32 = []


[workspace]
members = ["plugins/dynamifir", "plugins/brj_test", "xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "vst3",
] }
rustfft = "6.1.0"
rayon = "1.10.0"
heapless = "0.8.0"
lazy_static = "1.4.0"
assert_no_alloc = "1.1.2"
num = "0.4.3"
rand = "0.9.2"
biquad = "0.5.0"
cpal = "0.16.0"
iir_filters = "0.1.3"


[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
